--- a/css/styles.css
+++ b/css/styles.css
@@ -236,6 +236,45 @@ h1 {
   height: 50px;
 }
 
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 581px;
+  width: 528px;
+  margin: 0 auto;
+  background-color: var(--white-color);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  opacity: 0 !important;
+  z-index: -1;
+}
+
+.close {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 30px;
+  height: 30px;
+  padding-bottom: 2px;
+  border-radius: 100%;
+  z-index: 1;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .container-main {
   display: flex;
   align-items: center;
@@ -252,11 +291,6 @@ h1 {
   align-items: center;
   background-color: rgba(47, 48, 58, 1);
   background-image: url(../img/fondo-estudio.svg);
-}
-
-.form-1 {
-  background-color: var(--white-color);
-  width: 528px;
 }
 
 .solution {
