--- a/css/styles.css
+++ b/css/styles.css
@@ -245,6 +245,7 @@ h1 {
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
 }
 
 .modal {
@@ -257,6 +258,7 @@ h1 {
   background-color: var(--white-color);
   transform: translate(-50%, -50%) scale(1);
   transition: transform 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
 }
 
 .is-hidden {
@@ -265,14 +267,10 @@ h1 {
 }
 
 .close {
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  width: 30px;
-  height: 30px;
-  padding-bottom: 2px;
-  border-radius: 100%;
-  z-index: 1;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: white;
+  color: black;
+  right: 2%;
+  position: absolute;
 }
 
 .container-main {
@@ -321,6 +319,8 @@ button {
 }
 .button-porfolio:hover {
   color: var(--blue-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 h3 {
@@ -411,6 +411,8 @@ h3 {
 
 .a-svg:hover {
   background-color: var(--blue-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .a-svg:hover svg {
@@ -530,12 +532,12 @@ footer {
   align-items: center;
   border-radius: 4px;
   transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .svg-cliente:hover {
   border: 1px solid var(--blue-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .svg-clientes {
@@ -604,8 +606,6 @@ footer {
   line-height: 53px;
   text-align: center;
   transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .circle-svg svg {
@@ -614,6 +614,8 @@ footer {
 
 .circle-svg:hover {
   background-color: var(--blue-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container-footer {
